# COSCUP-ap-demo

./: .gitignore  .woodpecker.yml  app.py  misc.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pylint.yml  test.yaml
.woodpecker/: lint.yml  test.yml
data/: .gitignore
demo/: activitypub.py  actor.py  config.py  config.py.simple  httpsig.py
demo/utils/: checker.py  key.py
docs/: show.org
tests/: conftest.py  test_inbox.py  test_index.py  test_key.pem  test_nodeinfo.py
