[tool.poetry]
name = "coscup-ap-demo"
version = "0.1.0"
description = "ActivityPub demo"
authors = ["SouthFox <master@southfox.me>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
loguru = "^0.7.0"
pycryptodome = "^3.18.0"
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
